# ig-pulse

./: .dockerignore  .gitignore  Dockerfile  Lattice_sic_povm_d12.md  README.md  USER_GUIDE.md  commit.txt  coupling_edges_network.html  coupling_visualizer.html  damn.zip:Zone.Identifier  fly.toml  pyproject.toml  run_v2_selfcontained.py  sic_povm_convergence.md  sic_povm_d12.md
_builds/sic_povm_d12/: _body.md  _body.tex  sic_povm_d12.tex
data/: coupling.json  graph.json  seed_snapshots.jsonl  sic_fiducial_d12.npy
html/: coupling_visualizer.html  coupling_visualizer2.html
ig_pulse/: cli.py  collector.py  coupler.py  density_matrix.py  domain_streams.py  geo_viz.py  grapher.py  primitives.py  reporter.py  schema.py  sic_povm.py
ig_pulse/templates/: geo_map.html  solar_seismic.html
ig_pulse_atemporal_inference/: Belnap.lean  BelnapCategory.lean  BelnapLL.lean  BelnapSplitFuse.lean  BelnapTemporal.lean  ig_pulse_atemporal_inference.md
ig_pulse_readme_update/: README.md
vae_vita/: __init__.py  crystal_data.py  hyperspherical_vae.py  hyperspherical_vae_v2.py  model_quick.metrics.json  train.py  train_v2.py  vae_vita_ckpt.metrics.json  vae_vita_gpu.metrics.json  vae_vita_sic.metrics.json  vae_vita_sic50.metrics.json  vae_vita_stable.metrics.json  vae_vita_v2.log.v2.json  vae_vita_v2.metrics.v2.json  verify_sic.py
