[project]
name = "ig-pulse"
version = "0.1.0"
description = "Information propagation observatory — maps coupling between physical/computational systems via the 12 IG primitives"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "numpy",
    "scipy",
    "networkx",
]

[project.scripts]
ig-pulse = "ig_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
